Fix some alignments and borders

--- a/src/app/cdk/card/stack-container/stack-container.component.scss
+++ b/src/app/cdk/card/stack-container/stack-container.component.scss
@@ -4,10 +4,6 @@
   }
 }
 
-:host {
-  width: 100%;
-}
-
 .header-container {
   width: 100%;
   display: flex;
@@ -17,6 +13,7 @@
   height: 56px;
   padding-left: 14px;
   padding-right: 14px;
+  border-radius: 4px;
   .text-container,
   .inline-intial-side {
     display: flex;
