--- a/src/app/cdk/panel/panel/panel.component.scss
+++ b/src/app/cdk/panel/panel/panel.component.scss
@@ -1,6 +1,7 @@
 :host {
   border: solid 1px;
   display: block;
+  border-radius: 4px;
 }
 .header {
   box-sizing: border-box;
